tests/miniJava/neg/004393_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public String java ( ) { return 0 ; } }
